--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:17E9UM6oBIKvAQwMe2oJiBE6aiQ8r8z2a+EHNOwaPaU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
