--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,14 @@
     "require": {
         "php": "^7.2.5",
         "ext-simplexml": "*",
+        "backpack/settings": "^3.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.0",
+        "spatie/laravel-permission": "^3.16"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
@@ -22,6 +25,7 @@
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
         "phpunit/phpunit": "^8.5"
+
     },
     "config": {
         "optimize-autoloader": true,
