--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2.5",
         "ext-simplexml": "*",
         "backpack/crud": "4.1.*",
+        "backpack/generators": "^3.0",
         "backpack/settings": "^3.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
@@ -18,6 +19,8 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "laracasts/generators": "^1.1",
+        "cviebrock/eloquent-sluggable": "^7.0",
         "spatie/laravel-permission": "^3.16"
     },
     "require-dev": {
@@ -26,7 +29,6 @@
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
         "phpunit/phpunit": "^8.5"
-
     },
     "config": {
         "optimize-autoloader": true,
